아티스트 갤러리 모바일 UI수정

--- a/src/main/resources/templates/thymeleaf/fo/artistLibrary/artist.html
+++ b/src/main/resources/templates/thymeleaf/fo/artistLibrary/artist.html
@@ -28,7 +28,7 @@
 						<div class="swiper-wrapper" id="upAndComingArtist">
 							<div class="swiper-slide"></div>
 						</div>
-						<div class="swiper-pagination swpa-2 pc-no"></div>
+						<!-- <div class="swiper-pagination swpa-2 pc-no"></div> -->
 					</div>
 					<div class="swiper-button-next ait-r ta-no swl-1"><span><img src="resources/img/icon/ait-r.png"></span></div>
 					<div class="swiper-button-prev ait-l ta-no swr-1"><span><img src="resources/img/icon/ait-l.png"></span></div>
@@ -49,7 +49,7 @@
 						<div class="swiper-wrapper" id="middleAgedArtist">
 							<div class="swiper-slide"></div>
 						</div>
-						<div class="swiper-pagination swpa-2 pc-no"></div>
+						<!-- <div class="swiper-pagination swpa-2 pc-no"></div> -->
 					</div>
 					<div class="swiper-button-next ait-r ta-no swl-2"><span><img src="resources/img/icon/ait-r.png"></span></div>
 					<div class="swiper-button-prev ait-l ta-no swr-2"><span><img src="resources/img/icon/ait-l.png"></span></div>
@@ -70,7 +70,7 @@
 						<div class="swiper-wrapper" id="seniorArtist">
 							<div class="swiper-slide"></div>
 						</div>
-						<div class="swiper-pagination swpa-2 pc-no"></div>
+						<!-- <div class="swiper-pagination swpa-2 pc-no"></div> -->
 					</div>
 					<div class="swiper-button-next ait-r ta-no swl-3"><span><img src="resources/img/icon/ait-r.png"></span></div>
 					<div class="swiper-button-prev ait-l ta-no swr-3"><span><img src="resources/img/icon/ait-l.png"></span></div>
