--- a/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetailWork.html
+++ b/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetailWork.html
@@ -11,26 +11,26 @@
 		<th:block th:replace="thymeleaf/header :: headerFragment"></th:block>
 		<div class="body-wrap">
 		
-			<input type="hidden" id="artstSq" >
+		<input type="hidden" id="artstSq" >
 		
 			<ul class="nav nav-pills ait-nav" id="pills-tab" role="tablist">
-				<li class="nav-item active">
-					<a class="nav-link" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">작가프로필보기</a>
+				<li class="nav-item ">
+					<a class="nav-link" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="false">작가프로필보기</a>
 				</li>
-				<li class="nav-item">
-					<a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false">작품보기</a>
+				<li class="nav-item active">
+					<a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="true">작품보기</a>
 					
 				</li>
 			</ul>
 			<div class="tab-content ait-tab" id="pills-tabContent">
-				<div class="tab-pane fade active in tab-pane1" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
+				<div class="tab-pane fade tab-pane1" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
 				
 					<div class="contents max-1500" id="artstInfo">
 						
 					</div>
 				
 				</div>
-				<div class="tab-pane fade tab-pane2" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
+				<div class="tab-pane fade  active in tab-pane2" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
 					
 					<div class="reds-box ati-reds">
 						<ul class="pc-on">
@@ -168,10 +168,8 @@
       
 var artstInfo = /*[[${result}]]*/ 'default';
 
-$(function() { 
+$(function() {    
 	var result = artstInfo.workList;
-	
-	//console.log(result[0].artstSq);
 	
 	$("#artstSq").val(result[0].artstSq);
 	
@@ -581,50 +579,36 @@ function masonryLayout() {
 	
 }
 
-function mobile_MasonryLayout() {
-	
-	
-	$('.grid').masonry({
-	  	  itemSelector: '.griditem',
-	  	  columnWidth: 360,
-	  	  gutter: 10,
-	  	  horizontalOrder: true,
-	  	  // originLeft: false //왼쪽부터 정렬 
-	  	  // originTop: false //바닥부터
-	  	 // transitionDuration: '0.2s' //위치 전환 시간
-	});
-	
-	
-	
-}
-
-
-
 
 
 $( document ).ready(function() {
 	
+	
+	if (self.name != 'reload') {
+        self.name = 'reload';
+        self.location.reload(true);
+    }
+    else self.name = '';
+	
 	 
-  $("#pills-profile-tab").unbind("click").bind("click",function(){
-	  var artstSq= $("#artstSq").val();
-	  
-	     
-	  pageGoPost({
-			url:"/artistDetailWork",
-			target:"_self",
-			vals:[
-				["artstSq", artstSq]
-			]
+	  $("#pills-home-tab").unbind("click").bind("click",function(){
+		  var artstSq= $("#artstSq").val();
+		  
+		     
+		  pageGoPost({
+				url:"/artistDetail",
+				target:"_self",
+				vals:[
+					["artstSq", artstSq]
+				]
+			});
+			 
 		});
 		 
+	 
+		 
+		 	
 	});
-	 
- 
-	 
-	 	
-});
-
-
 
 
       
