--- a/src/main/resources/templates/thymeleaf/index.html
+++ b/src/main/resources/templates/thymeleaf/index.html
@@ -61,7 +61,7 @@
 			<div class="contents mo-nav">
 				<nav>
 					<li><a href="/deal">Deal</a></li>
-					<li><a href="javascript:fnModalAlert();">Megazine</a></li>
+					<li><a href="/insights">Mgz9</a></li>
 					<li><a href="/artist">Artist Library</a></li>
 					<li><a href="/serviceIntro">About</a></li>
 				</nav>
